crates/swc_ts_fast_strip/tests/errors/assertion-associativity-satisfies.ts
1 ** 1 satisfies number ** 2;